# bive

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ARTIFACT_MANIFEST.json  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  PRODUCT_SYSTEM_INDEX.json  README.md  RELEASE_CHECKLIST.md  REPO_TREE.txt  ROADMAP.md  SECURITY.md  SOURCE_REGISTRY.yaml  TEST_RESULT.md  build_backend.py  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  manifest-sync.yml  release.yml  scorecard.yml
artifacts/: demo_report.json  demo_report.md  demo_report_v0_4_0.json  demo_report_v0_4_0.md
artifacts/benchmarks/: pipeline.json
artifacts/security/: licenses.stage7.json  pip-audit.json
artifacts/verification/: AOS_KERNEL_VALIDATION.json  AUTOMATION_CONTRACT.json  BIBLIOGRAPHY_VALIDATION.json  COGNITIVE_CONTROL_PLANE.json  DEPENDENCY_CONTRACT_VALIDATION.json  DYNAMIC_ENVIRONMENT_PROBE.json  EVIDENCE_BUNDLE.json  INDEPENDENT_GATE_EVIDENCE.md  MICROSOFT_REST_CONTRACT.json  NEUROCOGNITIVE_PROTOCOL.json  OPERATIONAL_EXCELLENCE_VALIDATION.json  PATCHED_FILE_INVENTORY.txt  PATCH_SUMMARY.md  PRODUCTIZATION_SUMMARY.md  PRODUCT_READINESS.json  SCIENCE_REGISTRY_VALIDATION.json  STAGE11_INDUSTRIAL_PRODUCT_SUMMARY.md  STAGE4_PRODUCT_DESIGN_SUMMARY.md  STAGE5_CODE_TEST_HARDENING_SUMMARY.md  STAGE6_DYNAMIC_SCIENCE_PACKAGING_SUMMARY.md  STAGE7_ENGINEERING_AUTOMATION_SUMMARY.md  STAGE8_MICROSOFT_HARDENING_SUMMARY.md  STAGE9_AOS_CANONICAL_SUMMARY.md  TEST_ARCHITECTURE.json  THREAT_MODEL_VALIDATION.json  gates.json
constraints/: py310.txt
contracts/: execution_contract_template.yaml  tool_contract_template.yaml  workflow_contract_template.yaml
data/operations/: dynamic_scenarios.json  service_slo.json
data/product/: industrial_release_scorecard.json  product_operating_model.json
data/security/: stride_threat_model.json
docs/: AGENT_PROTOCOLS.md  AOS_PROMPT_OS.md  API.md  ARCHITECTURE.md  AUTOMATION_OF_AUTOMATION_KERNEL.md  AUTOMATION_PLAYBOOK.md  BACKEND_FRONTEND_CONTRACT.md  BEHAVIORAL_PROGRAMS.md  BIBLIOGRAPHY.md  BUILD_BACKEND_DECISION.md  CALIBRATION_MODEL.md  COGNITIVE_CONTROL_PLANE.md  COMPONENT_ARCHITECTURE.md  CRITICAL_AUDIT.md  DATASET_REGISTRY.md  DEPENDENCY_POLICY.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  DYNAMIC_ENVIRONMENT_MODEL.md  ENGINEERING_VALIDATION.md  EVAL_PROTOCOL.md  FORMAL_SPEC.md  FRACTAL_ORCHESTRATION_MODEL.md  GITHUB_OPEN_SOURCE_READINESS.md  INDUSTRIAL_RELEASE_PACKAGE.md  LIMITATIONS.md  MAINTAINER_RUNBOOK.md  MICROSOFT_REST_CONTRACT.md  NEUROCOGNITIVE_FEATURE_MAP.md  NEUROCOGNITIVE_TASK_PROTOCOL.md  OPEN_SOURCE_STACK.md  OPERATIONAL_EXCELLENCE_MODEL.md  OPERATIONS.md  PRODUCT_MANAGER_READINESS.md  PRODUCT_OPERATING_MODEL.md  PRODUCT_SPEC.md  PR_MERGE_PROTOCOL.md  RED_TEAM_PROTOCOL.md  RELEASE_GATES.md  RESEARCH_CANON.md  (+14 more)
evals/: aos_score_schema.json
prompts/: AOS_PROMPT_KERNEL_v1.0.txt  CODE_AGENT_PRODUCTION_PROMPT.md
requirements/: README.md  api.in  api.txt  constraints.txt  core.in  core.txt  dev.in  dev.txt  prod.in  prod.txt  security.in  security.txt
samples/: demo_transcript.json  eval_binary.json
schemas/: evidence_event.schema.json  transcript_analyze_request.schema.json  verification_report.schema.json
scripts/: api_smoke.py  benchmark_pipeline.py  check_environment.py  check_frontend_quality.py  check_repo_clean.py  check_ui_assets.py  dependency_audit.py  determinism_stress.py  dynamic_environment_probe.py  export_openapi.py  generate_evidence_bundle.py  generate_manifest.py  pr_check.py  validate_aos_kernel.py  validate_automation_contract.py  validate_bibliography.py  validate_cognitive_control_plane.py  validate_dependency_contracts.py  validate_metadata.py  validate_microsoft_rest_contract.py  validate_neurocognitive_protocol.py  validate_operational_excellence.py  validate_product_operating_model.py  validate_release_manifest.py  validate_schemas.py  validate_science_registry.py  validate_test_architecture.py  validate_threat_model.py  verify_release.py  wheel_smoke.py
src/bive/: __init__.py  aos.py  aos_cli.py  api.py  api_models.py  api_runtime.py  calibration.py  cli.py  cognitive_control.py  eval.py  evidence_graph.py  falsifier.py  fusion.py  governance.py  ingest.py  linguistics.py  models.py  neurocognitive.py  observability.py  pipeline.py  pr_gate.py  product.py  provenance.py  pseudoscience_guard.py  quality_gate.py  questions.py  red_team.py  report.py  science.py  settings.py  simulation.py  storage.py  validation.py  weights.py
src/bive/adapters/: __init__.py  base.py  openface_adapter.py  opensmile_adapter.py  whisper_adapter.py
src/bive/resources/: __init__.py  aos_eval_tasks.json  aos_kernel_contract.json  cognitive_control_plane.json  neurocognitive_feature_map.json  neurocognitive_task_protocol.json  product_operating_model.json  science_registry.json
src/bive/web/: index.html
src/bive/web/static/: app.js  (+1 more)
tests/: test_adapters_contract.py  test_aos_api_contract.py  test_aos_kernel.py  test_api.py  test_api_operational_contract.py  test_api_security_runtime.py  test_automation_contract.py  test_behavioral_invariants.py  test_bibliography_contract.py  test_calibration.py  test_cli_failure_contract.py  test_cli_strict_contract.py  test_cognitive_control_plane.py  test_dependency_contracts.py  test_determinism_stress.py  test_dynamic_environment_probe.py  test_eval.py  test_evidence_graph.py  test_frontend_contract.py  test_linguistics.py  test_microsoft_hardening_contract.py  test_models.py  test_neurocognitive_protocol.py  test_pr_gate.py  test_product_operating_model.py  test_quality_gate.py  test_red_team_and_simulation.py  test_release_gate_contract.py  test_report.py  test_schema_contract.py  test_science_api_contract.py  test_science_registry.py  test_settings_contract.py  test_storage.py  test_storage_operational_contract.py  test_ui_assets.py  test_version_contract.py
