[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "bive"
version = "0.4.0"
description = "Behavioral Integrity Verification Engine: evidence-first transcript verification, falsification and review system."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{name = "neuron7xLab"}]
maintainers = [{name = "neuron7xLab"}]
keywords = ["multimodal", "verification", "provenance", "deception-research", "evidence-graph"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pydantic>=2.6,<3"]

[project.urls]
Homepage = "https://github.com/neuron7xLab/bive"
Repository = "https://github.com/neuron7xLab/bive"
Issues = "https://github.com/neuron7xLab/bive/issues"
Documentation = "https://github.com/neuron7xLab/bive/tree/main/docs"

[project.optional-dependencies]
dev = ["pytest>=8,<10", "pytest-cov>=5,<8", "ruff>=0.6,<1", "mypy>=1.10,<3", "jsonschema>=4,<5", "httpx>=0.27,<1", "bandit>=1.7,<2", "build>=1.2,<2", "pip-licenses>=5,<6", "pip-tools>=7,<8", "tomli>=2,<3; python_version < '3.11'"]
security = ["bandit>=1.7,<2", "pip-audit>=2.7,<3", "cyclonedx-bom>=5,<8", "pip-licenses>=5,<6"]
ml = ["numpy>=1.26,<3", "pandas>=2,<3", "scikit-learn>=1.4,<2"]
media = ["openai-whisper", "pyannote.audio", "opensmile", "opencv-python"]
api = ["fastapi>=0.110,<1", "uvicorn[standard]>=0.27,<1"]
ops = ["dvc>=3,<4", "mlflow>=2,<4", "evidently>=0.4,<1"]
all = ["bive[dev,api,ml,media,ops]"]

[project.scripts]
bive = "bive.cli:main"
bive-pr-check = "bive.pr_gate:main"
bive-api = "bive.api:main"
bive-aos = "bive.aos_cli:main"
bive-cognitive-control = "bive.cognitive_control:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bive = ["web/index.html", "web/static/*", "resources/*.json"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "contract: API, CLI, schema, dependency, documentation and release contract tests",
  "dynamic: dynamic-environment, concurrency and failure-path tests",
  "security: auth, input-boundary and supply-chain-adjacent tests",
  "slow: heavier release or subprocess tests"
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["bive"]

[tool.coverage.run]
omit = [
  "src/bive/adapters/*",
  "src/bive/cli.py"
]

[tool.bandit]
skips = ["B104"]
exclude_dirs = ["tests", "dist", "build"]


[[tool.mypy.overrides]]
module = ["IPython.*", "matplotlib_inline.*", "dns.*", "email_validator.*", "pydantic.v1.*", "tomli", "tomli.*"]
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*", "uvicorn", "uvicorn.*", "jsonschema", "jsonschema.*", "referencing", "referencing.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bive.api_runtime"
disallow_untyped_decorators = false
